2006-02-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/*:
  - Disable pointless Visual C++ warnings in headers (Bart Samwel)
 include/pqxx/compiler-internal-post.hxx,
 include/pqxx/compiler-internal-pre.hxx:
  - New
  - Wrap libpqxx headers in temporary warning suppression on Visual C++
  - Designed by Bart Samwel
 include/pqxx/util.hxx:
  - Work around yet another pointless Visual C++ warning (Bart Samwel)
 tools/maketestvcmak.pl:
  - Removed obsolete linker function /pdbtype (Bart Samwel)
 tools/preprelease:
  - Check for matching compiler-internal-pre/post.hxx headers
2006-02-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/libpq/8.1/config-internal-libpq.h
  - New
  - Adds PQserverVersion()--thanks Bart Samwel
  - Adds PQprepare()
 include/pqxx/compiler-public.hxx:
  - Use debug build of libpq when building debug libpqxx, (Bart Samwel)
 include/pqxx/basic_connection.hxx, include/pqxx/connection_base.hxx,
 include/pqxx/connectionpolicy.hxx, src/connection_base.cxx,
 src/connection.cxx:
  - Moved workaround for MSVC++ "output in destructor" bug to leaf destructor
  - Fixed late activation in "direct" connections (thanks Bart Samwel)
  - Explicitly zero-initialize capabilities (thanks Bart Samwel)
  - Allow friends to set capabilities explicity (handy if proven present)
 include/pqxx/compiler-internal.hxx, include/pqxx/compiler-public.hxx:
  - Moved Visual C++ "silence stupid warning" pragmas to "internal" header
  - Silence Visual C++ warning 4800 from here
  - No longer require config-internal-autotools header
 include/pqxx/subtransaction.hxx, src/subtransaction.cxx:
  - More intelligent check for nested-transactions support on the backend
 src/except.cxx:
  - Forgot to include compiler-internal.hxx
 test/test074.cxx:
  - More work on silencing pointless Visual C++ warning, thanks Bart Samwel
 tools/maketestvcmak.pl, tools/makevcmake.pl:
  - Made compatible with Windows, thanks Bart Samwel